Add reference for forthcoming payments functionality

--- a/src/main/webapp/WEB-INF/templates/menu.html
+++ b/src/main/webapp/WEB-INF/templates/menu.html
@@ -131,8 +131,7 @@
 	<hr id="menu_separator"
 		style="float: left; width: 110%; margin-top: 3%" />
 
-	<form th:action="@{/inquire}" th:object="${service}" method="post"
-		style="width: 100%; float: left;">
+	<form th:action="@{/inquire}" style="width: 100%; float: left;">
 		<div class="inquire_div">
 			<label class="label"
 				style="float: left; margin-right: 50px; width: 300px">Reference
