--- a/src/main/webapp/WEB-INF/templates/customerMenu.html
+++ b/src/main/webapp/WEB-INF/templates/customerMenu.html
@@ -66,6 +66,7 @@
 		method="post" style="width: 50%; float: left">
 		<input type="hidden" th:field="*{customerId}"/>
 		<input type="hidden" th:field="*{services}"/>
+		<input type="hidden" th:field="*{role}" />
 		
 		<div class="inputs_div">
 			<label class="label_menu">Name:</label> <input type="text"
@@ -115,10 +116,10 @@
 	<hr id="menu_separator "
 		style="float: left; width: 110%; margin-top: 0.31%" />
 
-	<form th:action="@{/exit}" th:object="${service}" method="post"
+	<form th:action="@{/tryLogout}" th:object="${service}" method="post"
 		style="width: 100%; float: left;">
 		<div class="exit_div">
-			<a th:href="@{|/index|}" class="button">Log out</a>
+			<input type="submit" class="button button_float" value="Log out" />
 		</div>
 	</form>
 </body>
